# law_web

./: .gitignore  API.md  PRD.md
services/api/: .env.example  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 8651f2a29cf2_create_users_table.py
services/api/app/: main.py
services/api/app/api/v1/endpoints/: health.py
services/api/app/core/: config.py
services/api/app/db/: session.py
services/api/app/models/: user.py
