[project]
name = "law-web-api"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.1",
    "greenlet>=3.5.0",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.47.0",
]
